Test on osx with Travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,6 @@
 language: c
+os:
+  - linux
+  - osx
 install: wget http://91.134.26.107/numbers.txt.bz2 && bunzip2 numbers.txt.bz2
 script: make test && make test && make test && make test && make test
